ekl-backend-ws/k8s/overlay/dev/deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ekl-backend-ws
spec:
  template:
    spec:
      containers:
        - name: ekl-backend-ws
  replicas: 1
