ekl-backend-ws/k8s/overlay/dev/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: ekl-backend-ws
spec:
  selector:
    app: ekl-backend-ws-dev
