ekl-backend-ws/k8s/overlay/dev/virtualservice-dev.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ekl-backend-ws
spec:
  hosts:
    - ekl-backend-ws-dev.ponyworld.io
  http:
    - route:
        - destination:
            host: ekl-backend-ws-dev.ekl-k8s-dev.svc.cluster.local
            port:
              number: 8080
      timeout: 60s
  tls:
    - match:
      - port: 443
        sniHosts:
          - ekl-backend-ws-dev.ponyworld.io
      route:
        - destination:
            host: ekl-backend-ws-dev.ekl-k8s-dev.svc.cluster.local
            port:
              number: 8443
